# Machine-Learning-Projects

./: .gitignore
Data Mining/: Netflix_Customer_Churn_Analysis (1).ipynb
Data Mining/netflix-customer-churn-analysis-and-prediction/: Netflix Customer Churn Analysis and Prediction.ipynb  README.md  main.py  pyproject.toml
Data Mining/netflix-customer-churn-analysis-and-prediction/netflix-churn-prediction/: README.md  churn_adaboost_artifact.joblib
Text Mining/: Nikita_Ramsey_W2_HW2.html  Nikita_Ramsey_W2_HW2.ipynb  Nikita_Ramsey_W2_HW2_.html  Nikita_Ramsey_W2_HW2_.ipynb  Nikita_Ramsey_WK3_HW.ipynb  Nikita_Ramsey_Week4_HW_.ipynb  Nikita_Ramsey_Week5_HW.ipynb  Nikita_Ramsey_Week6_HW.ipynb
data-mining/insurance-customer-segmentation-and-prediction/insurance-segmentation-prediction/: README.md  fraud_xgboost_artifact.joblib  insurance-segmentation-and-prediction.ipynb  main.py  pyproject.toml
data-mining/loan-default-analysis-and-prediction/loan-default-prediction/: loan-default-analysis-and-prediction.ipynb  main.py  pyproject.toml
data-mining/netflix-customer-churn-analysis-and-prediction/netflix-churn-prediction/: Netflix Customer Churn Analysis and Prediction.ipynb  README.md  pyproject.toml
