[project]
name = "insurance-segmentation-prediction"
version = "0.1.0"
description = "End-to-end insurance customer segmentation and fraud prediction using EDA, preprocessing, and XGBoost modeling."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "xgboost",
  "joblib",
  "jupyter",
]

